--- a/content/docs/access/account.mdx
+++ b/content/docs/access/account.mdx
@@ -29,6 +29,13 @@ Later, you can access your account and services in the same way.
 You may add credentials from other organizations you're affiliated with, including social providers like Google, ORCID, or Czech MojeID, to access your e-INFRA CZ Account.
 </Callout>
 
+
+<Callout type="info" title="Credentials">
+By default, your e-INFRA CZ account does not require new credentials. However, some services may ask for a dedicated e-INFRA CZ username and password. You will be prompted to create these credentials the first time you access such a service.
+
+Once created, the same credentials will be used across all services that require them. You can manage them anytime via the [e-INFRA CZ User Profile](https://profile.e-infra.cz).
+</Callout>
+
 ## Compliance With Access Conditions
 
 Your affiliation with an academic organization (and thus your compliance with access conditions) is usually verified automatically during service registration or upon access. 
@@ -125,16 +132,12 @@ TBD link
 Non-web services typically authenticate via login/password, Kerberos, or SSH keys. Please take a look at the respective service documentation for precise instructions.
 
 
-## e-INFRA CZ Login/Password Management
-
-By default, your e-INFRA CZ Account doesn't require new credentials; however, some services necessitate specific e-INFRA CZ username/password credentials. You'll first need to create these after using such a service. Once defined, these credentials are uniform across all services requiring them and managed at the [e-INFRA CZ User Profile](https://profile.e-infra.cz).
-
 
 ## Personal Account and Password Changes
 
-Your account and access to services are managed by e-INFRA CZ AAI (Perun system), based on the AARC Blueprint Architecture. Account properties, settings, and passwords are conveniently managed through the [e-INFRA CZ User Profile](https://profile.e-infra.cz). Services may also have their own dedicated account settings based on their unique requirements.
+Your account and access to services are managed by e-INFRA CZ AAI (Perun system). Account properties, settings, and passwords are conveniently managed through the [e-INFRA CZ User Profile](https://profile.e-infra.cz).
 
-- Manage your account at: [e-INFRA CZ User Profile](https://profile.e-infra.cz)
+
 
 
 
