--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -19,7 +19,7 @@ To prevent being locked out of your account, we strongly recommend generating on
 Use our interactive guide to help you choose the right MFA method based on your device and preference.
 
 
-<iframe src="https://www.figma.com/embed?embed_host=oembed&amp;url=https://www.figma.com/proto/aM6v3459PusLBOCFjYoqJi/Which-MFA-is-right-for-me?type=design&amp;node-id=894-919&amp;t=9mQFJjoDv6pQy4Tg-8&amp;scaling=scale-down-width&amp;page-id=894%3A918&amp;starting-point-node-id=894%3A919&amp;hide-ui=1" data-testid="embed-card-resolved-view-frame" data-iframe-loaded="true" allowfullscreen="" scrolling="yes" allow="autoplay; encrypted-media; clipboard-write"></iframe>
+<iframe src="https://www.figma.com/embed?embed_host=oembed&amp;url=https://www.figma.com/proto/aM6v3459PusLBOCFjYoqJi/Which-MFA-is-right-for-me?type=design&amp;node-id=894-919&amp;t=9mQFJjoDv6pQy4Tg-8&amp;scaling=scale-down-width&amp;page-id=894%3A918&amp;starting-point-node-id=894%3A919&amp;hide-ui=1" data-testid="embed-card-resolved-view-frame" data-iframe-loaded="true" allowfullscreen="" scrolling="yes" allow="autoplay; encrypted-media; clipboard-write" width="100%" height="600px"></iframe>
 
 
 ### TOTP (Time-based One-Time Password)
