--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -114,8 +114,8 @@ Once you register your first token, MFA will be required whenever you log in to 
 
 ### Register Your First Token
 
-1. Visit the [MFA Management Page](https://mfa.login.e-infra.cz), or go to your [e-INFRA CZ User Profile](https://profile.e-infra.cz/profile), then navigate to `Settings` → `Authentication` and click `Manage my MFA tokens`.
-2. Sign in with your e-INFRA CZ credentials.
+1. Visit the [MFA Management Page](https://mfa.login.e-infra.cz), or go to your [e-INFRA CZ User Profile](https://profile.e-infra.cz/profile), then navigate to `Authentication` -> `Multi-Factor Autentication (MFA)` and click on `Manage my MFA tokens`.
+2. Sign in with your identity from your home institution.
 3. Click **Log In** to enter the MFA management application (privacyIDEA).
 ![Login as](/img/account/add01.jpeg)
 
