--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -114,7 +114,7 @@ Once you register your first token, MFA will be required whenever you log in to 
 
 ### Register Your First Token
 
-1. Visit the [MFA Management Page](https://mfa.login.e-infra.cz), or go to your [e-INFRA CZ User Profile](https://profile.e-infra.cz/profile), then navigate to `Authentication` -> `Multi-Factor Autentication (MFA)` 
+1. Visit the [MFA Management Page](https://mfa.login.e-infra.cz), *or* go to your [e-INFRA CZ User Profile](https://profile.e-infra.cz/profile) and navigate to `Authentication` -> `Multi-Factor Autentication (MFA)` 
 2. Click on `Manage my MFA tokens` and sign in with your identity from your home institution.
 3. Click **Log In** to enter the MFA management application (privacyIDEA).
 ![Login as](/img/account/add01.jpeg)
