--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -178,7 +178,7 @@ MFA is required:
 To enable MFA globally:
 
 1. Go to your [e-INFRA CZ User Profile](https://profile.e-infra.cz/)
-2. Navigate to `Settings` → `Authentication`
+2. Navigate to  `Authentication` -> `Multi-Factor Autentication (MFA)`
 3. Toggle `Turn on multi-factor authentication for all services`
 ![Toggle](/img/account/toggle.png)
 
@@ -216,7 +216,7 @@ You must still register at least one MFA token with your e-INFRA CZ Account to r
 
 MFA tokens managed by your home organization are **not supported by us**, and we **cannot assist** if you lose access to them.
 
-Do **not** register shared or employer-owned MFA tokens (e.g., company-issued YubiKeys) unless you are certain they are your personal devices.
+Do **not** register shared or employer-owned MFA tokens (e.g., company-issued YubiKeys) unless you are sure they are your personal devices.
 </Callout>
 
 
