--- a/content/docs/access/mfa.mdx
+++ b/content/docs/access/mfa.mdx
@@ -18,7 +18,7 @@ Check our interactive guide to help you choose the right MFA method based on you
 <iframe src="https://www.figma.com/embed?embed_host=oembed&amp;url=https://www.figma.com/proto/aM6v3459PusLBOCFjYoqJi/Which-MFA-is-right-for-me?type=design&amp;node-id=894-919&amp;t=9mQFJjoDv6pQy4Tg-8&amp;scaling=scale-down-width&amp;page-id=894%3A918&amp;starting-point-node-id=894%3A919&amp;hide-ui=1" data-testid="embed-card-resolved-view-frame" data-iframe-loaded="true" allowfullscreen="" scrolling="yes" allow="autoplay; encrypted-media; clipboard-write" width="100%" height="600px"></iframe>
 
 
-### Step 1 - TOTP (Time-based One-Time Password) Setting
+### TOTP (Time-based One-Time Password) Setting
 
 TOTP is a widely used standard where a mobile or desktop app generates 6-digit codes that change every 30 seconds. These codes are generated based on a shared secret between your device and our servers.
 
@@ -56,7 +56,7 @@ If you already use a TOTP app, simply add your e-INFRA CZ account. No need to in
 TOTP is standardized in [RFC 6238](https://datatracker.ietf.org/doc/html/rfc6238)
 
 
-### Step 2 - WebAuthn (Web Authentication) Setting
+### WebAuthn (Web Authentication) Setting
 
 WebAuthn is often integrated into modern operating systems and browsers.
 
@@ -80,7 +80,7 @@ Learn more at [webauthn.io](https://webauthn.io) and [webauthn.me](https://webau
 </Callout>
 
 
-<Callout type="info" title="WebAuth Support in various OS">WebAuth Support in various OS
+<Callout type="info" title="WebAuth Support in various OS">
 - **Windows 10+**: Use [Windows Hello](https://support.microsoft.com/en-us/windows/configure-windows-hello-dae28983-8242-bb2a-d3d1-87c9d265a5f0) using a PIN, facial recognition, or fingerprint. Windows 10 build 1903 or later is required.
 - **macOS 10.15+**: [Touch ID](https://support.apple.com/en-in/guide/mac-help/mchl16fbf90a/mac) feature can be used (Chrome, Safari). 
 - **Android 7+**: Requires [screen lock](https://support.google.com/android/answer/9079129?hl=en) (PIN, pattern, fingerprint, face)
@@ -90,7 +90,7 @@ Learn more at [webauthn.io](https://webauthn.io) and [webauthn.me](https://webau
 </Callout>
 
 
-## Step 3 - How to Set MFA in Perun
+## How to Set MFA in Perun
 Register at least one token. Your **first token must be TOTP**.
 
 <Callout type="info">
