Update acknowledgment link format in ORCID documentation
added link

--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -75,7 +75,7 @@ Our overarching goal is to achieve a fully automated pipeline for capturing rese
 
 To shield the users from excessive reporting, we rely on an automated data collection system. For this system to function reliably, we require the users: 
 
- * Add Acknowledgement of e-INFRA CZ [Link] in all publications 
+ * Add [Acknowledgement of e-INFRA CZ in all publications](account#mandatory-acknowledgment-text-in-publications) 
 
  * Link the ORCID ID to your e-INFRA account and use ORCID iD for all publications
 
