--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -71,25 +71,23 @@ Whenever you acquire a new digital identity, change your home organization, upda
 
 ## The goal: automation and accuracy 
 
-Our overarching goal is to achieve a fully automated pipeline for capturing research impact. This ORCID-driven process will eliminate manual reporting and will ensure accurate data. 
+Our overarching goal is to achieve a fully automated pipeline for capturing research impact. This ORCID-driven process will eliminate manual reporting and ensure the accuracy of data. 
 
-To shield the users from excessive reporting, we rely on an automated data collection system. For this system to function reliably, we require the users: 
+To protect users from excessive reporting, we utilise an automated data collection system. For this system to function reliably, we require the users: 
 
  * Add [Acknowledgement of e-INFRA CZ in all publications](account#mandatory-acknowledgment-text-in-publications) 
 
- * Link the ORCID ID to your e-INFRA account and use ORCID iD for all publications
+ * **Link the ORCID iD to your e-INFRA account** and use the ORCID iD for all publications
 
 
 Here is what happens in real life—and where credit often gets lost: 
 
-|Scenario        |  Status  | The Result | 
-|----------------|----------|-------------|
+| Scenario                               | Status        | The Result                                                                 |
+|----------------------------------------|---------------|---------------------------------------------------------------------------|
+| Acknowledged + ORCID registered        | ✅ Perfect    | We can connect the publication with our users automatically. Impact is fully counted. |
+| Acknowledged, ORCID not registered     | ⚠️ Incomplete | We might find the paper, but we cannot reliably identify in our system who did the work. |
+| ORCID registered, not acknowledged     | ⚠️ Invisible  | We know who you are, but there is no acknowledgement. Impact can not be counted. |
 
-| Acknowledged +  ORCID registered | ✅ Perfect | We can connect the publication with our users automatically. Impact is fully counted. |
-
-| Acknowledged, ORCID not registered | ⚠️ Incomplete | We might find the paper, but we cannot reliably identify in our system who did the work.  |
-
-| ORCID registered, not acknowledged | ⚠️ Invisible | We know who you are, but there is no acknowledgement. Impact can not be counted. |
 
 
 ## Troubleshooting
