--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -101,7 +101,7 @@ Here is what happens in real life—and where credit often gets lost:
 * For context on ORCID from a Czech/EU GDPR perspective, you can view the [NTK webinar ‘ORCID and GDPR’](https://repozitar.techlib.cz/entities/publication/a661d601-1a0d-4407-b7da-323d65bbe239) (including legal commentary by Jakub Míšek)  
 * [Jak získat ORCID iD a jak si chytře nastavit profil (CZ)](https://www.youtube.com/watch?v=fy6p4kClx4I)
 * [What is ORCID? on Vimeo](https://vimeo.com/97150912)
-* [A Quick Tour of the ORCID Record on Vimeo]
+* [A Quick Tour of the ORCID Record on Vimeo](https://vimeo.com/495762735)
 * [Day 1: Register your ORCID and associate it with your U-M identity - Research Impact Challenge](https://vimeo.com/495762735)
 * [Names are not enough to ensure credit for your work and are inadequate for reliably connecting researchers with their research outputs…](https://guides.lib.umich.edu/c.php?g=914633&p=6589582)
  
