Add link to e-INFRA CZ User Profile
another link missing

--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -64,7 +64,7 @@ Note: Once you have registered and verified your email address with ORCID, pleas
 ## Managing your identity
 
 <Callout type="info" title="Keeping Your Profile Updated"> 
-Whenever you acquire a new digital identity, change your home organization, update your email address, or change your password, you can manage these settings centrally at the e-INFRA CZ User Profile. 
+Whenever you acquire a new digital identity, change your home organization, update your email address, or change your password, you can manage these settings centrally at the [e-INFRA CZ User Profile](https://profile.e-infra.cz/profile/). 
 </Callout>
 
 
