Update ORCID resource links in documentation
link added

--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -102,6 +102,6 @@ Here is what happens in real life—and where credit often gets lost:
 * [Jak získat ORCID iD a jak si chytře nastavit profil (CZ)](https://www.youtube.com/watch?v=fy6p4kClx4I)
 * [What is ORCID? on Vimeo](https://vimeo.com/97150912)
 * [A Quick Tour of the ORCID Record on Vimeo](https://vimeo.com/495762735)
-* [Day 1: Register your ORCID and associate it with your U-M identity - Research Impact Challenge](https://vimeo.com/495762735)
+* [Day 1: Register your ORCID and associate it with your U-M identity - Research Impact Challenge](https://guides.lib.umich.edu/c.php?g=914633&p=6589582)
 * [Names are not enough to ensure credit for your work and are inadequate for reliably connecting researchers with their research outputs…](https://guides.lib.umich.edu/c.php?g=914633&p=6589582)
  
