--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -8,9 +8,9 @@ This guide explains how to link your ORCID iD (Open Researcher and Contributor I
 
 ORCID iD is a free, globally recognized identifier that distinguishes you from other researchers with similar names (e.g., "J. Novák"). By linking it to e-INFRA CZ, you ensure:
 
-* Your research record remains consistent even if you change institutions, email addresses, or name formats.
-* It connects your publications, datasets, software, etc. across systems (Scopus, Web of Science, etc.).
-* It enables e-INFRA CZ to correctly associate your publications with your user account for reporting and grant tracking.
+* Your research record remains consistent even if you change institutions, email addresses, or name formats
+* It connects your publications, datasets, software, etc. across systems (Scopus, Web of Science, etc.)
+* It enables e-INFRA CZ to correctly associate your publications with your user account for reporting and grant tracking
 
 
 
@@ -23,17 +23,16 @@ If you already have an ORCID iD, follow these steps to connect it to your e-INFR
 
 * Go to the e-INFRA CZ profile management page: https://profile.e-infra.cz/profile/orcid
 
-* If you are not already logged in, you will be redirected to the e-INFRA CZ login page.
-  * Select your home organization (the institution linked to your e-INFRA account) from the list.
-  * Enter your standard institutional credentials.
+* If you are not already logged in, you will be redirected to the e-INFRA CZ login page
+  * Select your home organization (the institution linked to your e-INFRA account) from the list
+  * Enter your standard institutional credentials
 
-* Once logged in, look for the ORCID section and click the 'Add your ORCID account' button.
+* Once logged in, look for the ORCID section and click the 'Add your ORCID account' button
 
 
 * Authorize e-INFRA CZ 
   * Log in to your ORCID account 
-  * Click Authorize access to allow e-INFRA CZ (Perun) to read your ORCID record.
-
+  * Click Authorize access to allow e-INFRA CZ (Perun) to read your ORCID record
 
 * Confirmation: You will be redirected back to your e-INFRA CZ profile. You should now see your ORCID iD listed with a status confirming the link is active.
 
@@ -46,17 +45,17 @@ If you already have an ORCID iD, follow these steps to connect it to your e-INFR
 
 If you do not have an identifier yet, creating one takes only a few minutes.
 
-* **Register**: Go to https://orcid.org/register.
+* **Register**: Go to https://orcid.org/register
 
-* Enter your name and email.
+* Enter your name and email
 
-* We recommend setting your profile visibility to **Public** or **Trusted Parties** so that connected systems can verify your data.
+* We recommend setting your profile visibility to **Public** or **Trusted Parties** so that connected systems can verify your data
 
-* (Recommended) Add your current affiliation and link trusted sources (e.g., Crossref) to import your outputs automatically.
+* (Recommended) Add your current affiliation and link trusted sources (e.g., Crossref) to import your outputs automatically
 
 
 <Callout type="info">
-Note: Once you have registered and verified your email address with ORCID, please return to the How to Link Your EXISTING ORCID iD section above to complete the process.
+Note: Once you have registered and verified your email address with ORCID, please return to the [How to link your existing ORCID iD](#how-to-link-your-existing-orcid-id) section above to complete the process.
 </Callout>
 
 
@@ -92,8 +91,8 @@ Here is what happens in real life—and where credit often gets lost:
 
 ## Troubleshooting
 
-* "Access Denied" at ORCID: Ensure you are using the correct password for your ORCID account, not your university password.
-* Looping Login: If the page redirects you repeatedly, try clearing your browser cookies or using an Incognito/Private window.
+* "Access Denied" at ORCID: Ensure you are using the correct password for your ORCID account, not your university password
+* Looping Login: If the page redirects you repeatedly, try clearing your browser cookies or using an Incognito/Private window
 
 
 ## References
