--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -24,20 +24,16 @@ If you already have an ORCID iD, follow these steps to connect it to your e-INFR
 * Go to the e-INFRA CZ profile management page: https://profile.e-infra.cz/profile/orcid
 
 * If you are not already logged in, you will be redirected to the e-INFRA CZ login page
-  * Select your home organization (the institution linked to your e-INFRA account) from the list
+  * Select your home organization (the institution linked to your e-INFRA account) from the list of institutions
   * Enter your standard institutional credentials
 
-* Once logged in, look for the ORCID section and click the 'Add your ORCID account' button
-
+* Once logged in, in the ORCID section click the `Add your ORCID account` button
 
 * Authorize e-INFRA CZ 
   * Log in to your ORCID account 
   * Click Authorize access to allow e-INFRA CZ (Perun) to read your ORCID record
 
 * Confirmation: You will be redirected back to your e-INFRA CZ profile. You should now see your ORCID iD listed with a status confirming the link is active.
-
-
-
 
 
 
@@ -78,6 +74,12 @@ To protect users from excessive reporting, we utilise an automated data collecti
 
  * **Link the ORCID iD to your e-INFRA account** and use the ORCID iD for all publications
 
+
+
+<Callout type="info" title="Transition Period: Fair-share & manual reporting"> 
+During the transition period to a fully automated system, the following temporary manual step is required: 
+Please continue to register your publications manually (https://metavo.metacentrum.cz/cs/myaccount/pubs). 
+</Callout>
 
 Here is what happens in real life—and where credit often gets lost: 
 
