--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -30,8 +30,10 @@ If you already have an ORCID iD, follow these steps to connect it to your e-INFR
 * Once logged in, in the ORCID section click the `Add your ORCID account` button
 
 * Authorize e-INFRA CZ 
-  * Log in to your ORCID account 
+  * Log in to your ORCID individual or institucional account 
   * Click Authorize access to allow e-INFRA CZ (Perun) to read your ORCID record
+![orcid-add2](/img/account/orcid-11_o.png)
+![orcid-add3](/img/account/orcid-12_o.png)
 
 * Confirmation: You will be redirected back to your e-INFRA CZ profile. You should now see your ORCID iD listed with a status confirming the link is active.
 
