Add images for ORCID account authorization steps
Added images to enhance the ORCID authorization instructions.

--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -31,9 +31,18 @@ If you already have an ORCID iD, follow these steps to connect it to your e-INFR
 
 * Authorize e-INFRA CZ 
   * Log in to your ORCID individual or institucional account 
+ 
+
+<div class="w-110">  
+![image-webui](/img/account/orcid-11_o.png)  
+</div>  
+
+<div class="w-110">  
+![image-webui](/img/account/orcid-12_o.png)  
+</div> 
+
   * Click Authorize access to allow e-INFRA CZ (Perun) to read your ORCID record
-![orcid-add2](/img/account/orcid-11_o.png)
-![orcid-add3](/img/account/orcid-12_o.png)
+
 
 * Confirmation: You will be redirected back to your e-INFRA CZ profile. You should now see your ORCID iD listed with a status confirming the link is active.
 
