--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -27,7 +27,15 @@ If you already have an ORCID iD, follow these steps to connect it to your e-INFR
   * Select your home organization (the institution linked to your e-INFRA account) from the list of institutions
   * Enter your standard institutional credentials
 
-* Once logged in, in the ORCID section click the `Add your ORCID account` button
+<div class="w-80">  
+![image-webui](/img/account/orcid-2_o.png)  
+</div>  
+
+* Once logged in, in the ORCID section click the `Connect ORCID account` button
+
+<div class="w-110">  
+![image-webui](/img/account/orcid-1_o.png)  
+</div>  
 
 * Authorize e-INFRA CZ 
   * Log in to your ORCID individual or institucional account 
