--- a/content/docs/access/orcid.mdx
+++ b/content/docs/access/orcid.mdx
@@ -52,21 +52,21 @@ If you already have an ORCID iD, follow these steps to connect it to your e-INFR
   * Click Authorize access to allow e-INFRA CZ (Perun) to read your ORCID record
 
 <div class="w-110">  
-![image-webui](/img/account/orcid-13_o.png)  
+![image-webui](/img/account/orcid-13_up.png)  
 </div> 
 
 <div class="w-110">  
-![image-webui](/img/account/orcid-14_o.png)  
+![image-webui](/img/account/orcid-14_up.png)  
 </div> 
 
 * Confirmation: You will be redirected back to your e-INFRA CZ profile. You should now see your ORCID iD listed with a status confirming the link is active.
 
 <div class="w-110">  
-![image-webui](/img/account/orcid-15_o.png)  
+![image-webui](/img/account/orcid-15_up.png)  
 </div> 
 
 <div class="w-110">  
-![image-webui](/img/account/orcid-16_o.png)  
+![image-webui](/img/account/orcid-16_up.png)  
 </div> 
 
 ## Don't have an ORCID iD yet?
